# tollsys-backend

./: .env  .env.example  .gitignore  README.md  alembic.ini  models.py  pyproject.toml  requirements.txt  test.sql  tollsys-backend.db
.devcontainer/: devcontainer.json
.github/workflows/: fastapi-gh-pages.yml
alembic/: env.py  script.py.mako
alembic/old_versions/: a4c6429404f0_restore_constraints.py  a72951a86ce4_initial_tables.py  ac9f2fb2413a_initial_data.py
alembic/versions/: 0a0a99381414_rbac.py  0b7ffc1d7e18_uniq_user_username.py  16e54d06f8f0_roles_permissions.py  28ce0805a660_fix_role_relations.py  5814cf8dcbcb_roles_permissions2.py  a72951a86ce4_initial_tables.py  ac9f2fb2413a_initial_data.py  b79688354ca6_add_description_to_paymentmethod.py  f8deab6bc998_create_initial_tables.py
app/: main.py
src/: api.py  exceptions.py  main.py  permissions.py  tollsys-backend.db
src/auth/: __init__.py  controller.py  dependencies.py  models.py  permission_checker.py  service.py
src/booths/: controller.py  models.py
src/core/: models.py
src/database/: core.py  initial_data.py  initialize_data.py  models.py
src/payment_methods/: controller.py  models.py
src/permissions/: controller.py  models.py  service.py  utillis.py
src/role_permissions/: controller.py  models.py  service.py
src/roles/: controller.py  models.py  service.py
src/toll_payments/: controller.py  models.py
src/tolls/: controller.py  models.py
src/users/: controller.py  models.py  service.py
src/vehicle_types/: controller.py  models.py
