[project]
name = "tollsys-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.115.10",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.23",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
    "types-passlib>=1.7.7.20250408",
]

[tool.isort]
profile = "black"

[tool.pyright]
# These are the crucial overrides for ORM false positives
reportAttributeAccessIssue = "none"
reportOptionalMemberAccess = "none"
reportAssignmentType = "none"
#reportGeneralTypeIssues = "none"
